# email_notification_service

./: .gitignore  .ruff.toml  README.md  SITE.md  commitlint.config.js  pyproject.toml  requirements.txt
.github/workflows/: climbing_workout.yaml  cron.yaml  daily_report.yaml  weekly_report.yaml
email_notification_service/: __main__.py  cli.py  config.py  gsuite.py  handlers.py  lm_api.py  mail_client.py  templates.py
email_notification_service/services/: __init__.py  gsuite.py  lunchmoney.py  mail_client.py  template_manager.py
email_notification_service/templates/: account.html  base.html  base.py  climbing.html  climbing.py  daily_spending.html  spending.py  transaction_table.html  weekly_spending.html
email_notification_service/utils/: config.py  logger.py
mobile_banking_notifications/: __main__.py  config.py  lm_api.py  mail_client.py
mobile_banking_notifications/src/: __main__.py  handlers.py
mobile_banking_notifications/styles/: modest.css
